chapter_argocd/app/Kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: handson
  name: handson
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: handson
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: handson
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - image: ghcr.io/cloudnativedaysjp/cnd-handson-app/handson:legacy
        imagePullPolicy: IfNotPresent
        name: handson
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        # handson namespace に入れたバックエンドにつなぐ
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
        resources:
          requests:
            memory: 64Mi
            cpu: 50m
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
      terminationGracePeriodSeconds: 15
