chapter_argocd/app/Kustomize/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-httproute
spec:
  parentRefs:
  - name: handson-gateway
    namespace: gateway
    sectionName: http
  hostnames:
  - app.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: handson
      port: 80
